--- a/orarend.html
+++ b/orarend.html
@@ -61,16 +61,15 @@
             <tr>
                 <th rowspan="2"></th>
                 <th rowspan="2">Hétfő</th>
-                <th colspan="3">Kedd</th>
+                <th colspan="2">Kedd</th>
                 <th rowspan="2">Szerda</th>
                 <th rowspan="2" colspan="2">Csütörtök</th>
                 <th colspan="4">Péntek</th>
                 <th rowspan="2"></th>
             </tr>
             <tr>
-                <th>1.Csoport</th>
-                <th>2.Csoport</th>
-                <th>3.Csoport</th>
+                <th>A hét</th>
+                <th>B hét</th>
                 <th colspan="2">A Hét</th>
                 <th colspan="2">B Hét</th>
             </tr>
@@ -80,10 +79,9 @@
             <tr>
                 <th>1.óra</th>
                 <td>Ofő</td>
-                <td rowspan="3">InfTáv</td>
-                <td rowspan="2">IKT</td>
-                <td rowspan="2">Programozási alapok</td>
-                <td>Fizika</td>
+                <td>IKT</td>
+                <td></td>
+                <td><img src="Képek/Fizika.jpg" alt="fizika" width="120" height="35" title="Fizika"></td>
                 <td rowspan="2" colspan="2">Matematika</td>
                 <td colspan="4">Matematika</td>
                 <th colspan="2">8:30-9:10</th>
@@ -91,14 +89,14 @@
             <tr>
                 <th>2.óra</th>
                 <td rowspan="2">Történelem</td>
+                <td colspan="2">IKT</td>
                 <td>Komplex természettudomány</td>
-                <td colspan="4">Fizika</td>
+                <td colspan="4"><img src="Képek/Fizika.jpg" alt="fizika" width="120" height="35" title="Fizika"></td>
                 <th>9:20-10:00</th>
             </tr>
             <tr>
                 <th>3.óra</th>
-                <td rowspan="3">InfTáv</td>
-                <td>IKT</td>
+                <td rowspan="3" colspan="2">InfTáv</td>
                 <td>Matematika</td>
                 <td colspan="2">Komplex természettudomány</td>
                 <td rowspan="2">Digitális kultúra</td>
@@ -110,15 +108,13 @@
             <tr>
                 <th>4.óra</th>
                 <td>Angol</td>
-                <td rowspan="2">Programozási alapok</td>
-                <td rowspan="3">InfTáv</td>
                 <td>Irodalom</td>
                 <td colspan="2">Magyar</td>
                 <th>11:05-11:45</th>
             </tr>
             <tr>
                 <th>5.óra</th>
-                <td>Testnevelés</td>
+                <td><img src="képek/Testnevelés.jfif" alt="Testnevelés" width="120" height="35" title="Testnevelés"></td>
                 <td>Angol</td>
                 <td rowspan="2">Angol</td>
                 <td rowspan="2">Digitális kultúra</td>
@@ -128,17 +124,15 @@
             <tr>
                 <th>6.óra</th>
                 <td>Irodalom</td>
-                <td rowspan="2">IKT</td>
-                <td rowspan="2">Programozási alapok</td>
-                <td rowspan="2">Testnevelés</td>
+                <td rowspan="2" colspan="2"><img src="képek/Programozás.jpg" alt="Programozás" width="200" height="60" title="Programozás"></td>
+                <td rowspan="2"><img src="képek/Testnevelés.jfif" alt="Testnevelés" width="130" height="60" title="Testnevelés"></td>
                 <td colspan="4">Történelem</td>
                 <th>12:45-13:25</th>
             </tr>
             <tr>
                 <th>7.óra</th>
                 <td>Magyar</td>
-                <td></td>
-                <td colspan="2">Testnevelés</td>
+                <td colspan="2"><img src="képek/Testnevelés.jfif" alt="Testnevelés" width="120" height="35" title="Testnevelés"></td>
                 <td colspan="2">MunkIsm</td>
                 <td colspan="2"></td>
                 <th>13:30-14:10</th>
@@ -149,12 +143,12 @@
             <tr>
                 <th rowspan="2"></th>
                 <th>Közismereti</th>
-                <th colspan="3">Gyakorlati nap</th>
+                <th colspan="2">Gyakorlati nap</th>
                 <th colspan="7">Közismereti</th>
                 <th rowspan="2"></th>
             </tr>
             <tr>
-                <th colspan="11">Mechwart András Gépipari és Informatikai Technikum</th>
+                <th colspan="10"><a href="https://www.dszcmechwart.hu/" > Mechwart András Gépipari és Informatikai Technikum</a></th>
             </tr>
 
         </tfoot>
